# OKVSme

./: CMakeLists.txt  Defines.h  Encryption.h  Paxos.h  PxUtil.h  README.md  SimpleIndex.h  SocketComm.h  main.cpp  values.txt
